[project]
name = "langsmith-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "nicegui>=3.12.1",
    "passlib>=1.7.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "uvicorn>=0.49.0",
]
